# Firefox-Secu

./: README.md
FireFox-Extension/: LICENSE.txt  README.md  build.sh
FireFox-Extension/extension/: background.js  manifest.json
FireFox-Extension/extension/popup/: popup.css  popup.html  popup.js
FireFox-Extension/github/workflows/: build.yml
FireFox-Extension/python/: README.md  secureweb_analyzer.py
FireFox-Extension/src/rust/: Cargo.toml  cargo.toml
FireFox-Extension/src/rust/src/: lib.rs
FireFox-Extension/src/src/: lib.rs
