[package]
name = "wasm_analyzer"
version = "0.1.0"
edition = "2021"
description = "Moteur d'analyse de sécurité réseau en Rust compilé en WebAssembly"

[package.metadata.wasm-pack]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
url = { version = "2", features = ["serde"] }
regex = "1"
serde_json = "1"
sha2 = "0.10"
data-encoding = "2"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
